# nexus-move

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/nexus-move-bytecode/: Cargo.toml
crates/nexus-move-bytecode/src/: lib.rs
crates/nexus-move-package/: Cargo.toml
crates/nexus-move-package/src/: bootstrap_backend.rs  build.rs  lib.rs  native_backend.rs  precompiled_backend.rs  verified_backend.rs
crates/nexus-move-package/tests/: compile_roundtrip.rs
crates/nexus-move-runtime/: Cargo.toml
crates/nexus-move-runtime/src/: abi.rs  config.rs  executor.rs  gas.rs  lib.rs  move_gas_meter.rs  publisher.rs  resources.rs  session.rs  state.rs  types.rs  upstream.rs  vm_backend.rs
crates/nexus-move-runtime/tests/: cross_repo_compat.rs  vm_backend_integration.rs
crates/nexus-move-stdlib/: Cargo.toml
crates/nexus-move-stdlib/src/: lib.rs
crates/nexus-move-stdlib/src/framework/: ascii.mv  bit_vector.mv  string.mv  vector.mv
crates/nexus-move-types/: Cargo.toml
crates/nexus-move-types/src/: lib.rs
docs/: ARCHITECTURE.md  DEPENDENCY_FREEZE.md  DEVELOPMENT.md  FACADE_MAPPING.md  RELEASE.md
examples/counter/: Move.toml
examples/counter/nexus-artifact/: manifest.json  package-metadata.bcs
examples/counter/nexus-artifact/bytecode/: counter.mv
examples/counter/sources/: counter.move
examples/emitter/: Move.toml
examples/emitter/nexus-artifact/: manifest.json  package-metadata.bcs
examples/emitter/nexus-artifact/bytecode/: emitter.mv
examples/emitter/sources/: emitter.move
scripts/: audit-move-workspace-inheritance.sh  check-offline-build.sh  compile-nursery.sh  validate-main-repo-compat.sh  vendor-crate.sh
stdlib/audit_sources/: README.md
