[package]
name = "nexus-move-package"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
bootstrap-vendor = []
verified-compile = [
    "move-binary-format",
    "move-bytecode-verifier",
    "move-core-types",
    "move-bytecode-source-map",
    "move-ir-types",
    "move-symbol-pool",
]
native-compile = [
    "verified-compile",
    "move-compiler-v2",
    "legacy-move-compiler",
    "move-model",
    "dep:codespan-reporting",
]

[dependencies]
bcs = "0.1"
blake3 = "1"
nexus-move-stdlib.workspace = true
nexus-move-types.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optional: vendored Move crates for verified compile backend
move-binary-format     = { workspace = true, optional = true }
move-bytecode-verifier = { workspace = true, optional = true }
move-core-types        = { workspace = true, optional = true }
move-bytecode-source-map = { workspace = true, optional = true }
move-ir-types          = { workspace = true, optional = true }
move-symbol-pool       = { workspace = true, optional = true }

# Optional: vendored Move crates for native compile backend
move-compiler-v2       = { workspace = true, optional = true }
legacy-move-compiler   = { workspace = true, optional = true }
move-model             = { workspace = true, optional = true }
codespan-reporting     = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"

[dev-dependencies]
nexus-move-runtime = { path = "../nexus-move-runtime", features = ["vm-backend"] }
